# git-pre-conflict

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.local.json
.claude/scratchpad/: issue-1-conflict-details-guide.md
.github/workflows/: build.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: conflict.rs  error.rs  git.rs  guide.rs  lib.rs
src/: index.html  main.js  style.css
src-cli/: Cargo.toml
src-cli/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
