[package]
name = "git-pre-conflict-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "git_pre_conflict_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "git-pre-conflict-app"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "macros"] }
git-pre-conflict-core = { path = "../crates/core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
